# HookShield

./: .config.example  .env.example  .gitignore  .mise.toml  README.md  cli.py  config.yaml  hookshield_cli.py  main.py  monitor.py  pyproject.toml  requirements.txt  run_crash.bat
core/: clipboard_monitor.py  etw_consumer.py  file_scanner.py  keyboard_hook_detector.py  memory_scanner.py  process_detector.py  quarantine.py  red_team.py  remote_connection_detector.py  scoring_engine.py  startup_scanner.py  threat_intel_feed.py  wmi_scanner.py
data/: suspicious_keywords.yaml
rules/: keyloggers.yara
rust_hasher/: Cargo.toml  pyproject.toml
rust_hasher/src/: lib.rs
ui/: gui.py
utils/: config_loader.py  dblogs.py  email_sender.py  gethash.py  ip_scanner.py  logger.py  network_blocker.py  syslog_exporter.py
web/: app.py  dashboard.py
web/static/: index.html  script.js  style.css
